# epiar

./: .gitignore  BUILDING  ChangeLog  LICENSE.art  LICENSE.gfx  LICENSE.music  Makefile.am  NEWS  PACKAGING  README  TODO  autogen.sh  configure.ac  configure.in  update.sh  update_version.sh
Resources/Scripts/: commands.lua  landing.lua  player.lua
Resources/Skin/: skin.xml
Source/: menu.cpp
Source/Engine/: camera.cpp  camera.h  console.cpp  hud.cpp  simulation.cpp
Source/Sprites/: effects.cpp  sprite.cpp  sprite.h
Source/UI/: ui.cpp  ui.h  ui_action.h  ui_lua.cpp  ui_picture.cpp  ui_picture.h  ui_tabs.cpp  ui_tabs.h  ui_widget.h  ui_window.cpp  ui_window.h
Source/Utilities/: components.cpp  components.h  coordinate.h  file.cpp  timer.cpp  timer.h
data/animations/: Makefile.am  thrust.ani
data/art/: Makefile.am
data/audio/: Makefile.am
data/audio/engines/: credits.txt
data/audio/interface/: credits.txt
data/definitions/: Makefile.am
data/fonts/: Makefile.am
data/graphics/: Makefile.am
data/icons/: Makefile.am
data/saves/: Makefile.am
data/scenario/: Makefile.am
data/scenario/default/: alliances.xml  scenario.xml
data/scenario/main/: alliances.xml  commodities.xml  engines.xml  gates.xml  models.xml  outfits.xml  planets.xml  scenario.xml  sectors.xml  technologies.xml  weapons.xml
data/scripts/: Makefile.am  ai.lua  autopilot.lua  commands.lua  editor.lua  fleet.lua  landing.lua  missions.lua  npc.lua  player.lua  universe.lua  utilities.lua
data/simulation/: Makefile.am
data/simulation/default/: commodities.xml  engines.xml  gates.xml  models.xml  outfits.xml  planets.xml  simulation.xml  technologies.xml  weapons.xml
data/skin/: Makefile.am  skin.xml
resources/Animations/: Makefile.am
resources/Art/: Makefile.am
resources/Audio/: Makefile.am
resources/Definitions/: Makefile.am
resources/Fonts/: Makefile.am
resources/Graphics/: Makefile.am
resources/Icons/: Makefile.am
resources/Scripts/: Makefile.am  editor.lua  universe.lua  utilities.lua
resources/Simulation/: Makefile.am
resources/Simulation/default/: engines-default.xml  models-default.xml  outfits-default.xml  planets-default.xml  simulation.xml  weapons-default.xml
resources/Skin/: Makefile.am  skin.xml
resources/animations/: Makefile.am  asteroid.ani  explosion1.ani  shield.ani  thrust2.ani
resources/art/: Makefile.am
resources/audio/: Makefile.am
resources/definitions/: Makefile.am
resources/fonts/: Makefile.am
resources/graphics/: Makefile.am
resources/icons/: Makefile.am
resources/scenarios/: Makefile.am
resources/scenarios/main/: alliances.xml  map.xml  models.xml  scenario.xml  technologies.xml
resources/scripts/: Makefile.am  editor.lua  fleet.lua  player.lua  universe.lua  utilities.lua
resources/simulation/: Makefile.am
resources/simulation/default/: alliances.xml  commodities.xml  engines-default.xml  engines.xml  gates.xml  models-default.xml  models.xml  outfits.xml  planets.xml  simulation.xml  systems.xml  technologies.xml  weapons-default.xml  weapons.xml
resources/skin/: Makefile.am  skin.xml
source/: common.h  main.cpp  menu.cpp  menu.h
source/Engine/: camera.cpp  camera.h  commodities.cpp  console.cpp  engines.h  hud.cpp  mission.cpp  simulation.cpp  simulation.h  simulation_lua.cpp  starfield.cpp  starfield.h  weapons.h
source/Graphics/: animation.cpp  video.cpp  video.h
source/Sprites/: ai.cpp  ai_lua.cpp  gate.cpp  player.cpp  player.h  projectile.cpp  ship.cpp  sprite.cpp  sprite.h  spritemanager.cpp  spritemanager.h
source/Tests/: graphics.cpp  tests.cpp  ui.cpp
source/UI/: ui.cpp  ui.h  ui_button.cpp  ui_button.h  ui_checkbox.cpp  ui_dialogs.cpp  ui_dropdown.cpp  ui_frame.cpp  ui_lua.cpp  ui_picture.cpp  ui_scrollbar.cpp  ui_slider.cpp  ui_tabs.cpp  ui_window.cpp
source/Utilities/: coordinate.cpp  file.cpp  filesystem.cpp  quadtree.cpp  string_convert.h  timer.cpp  timer.h  xml.cpp
source/audio/: audio.cpp  music.cpp  music.h  sound.cpp  sound.h
source/engine/: calendar.cpp  calendar.h  camera.cpp  commodities.h  console.h  engines.cpp  mission.cpp  models.cpp  starfield.cpp  starfield.h  weapons.cpp
source/graphics/: font.h  image.cpp  image.h  video.cpp  video.h
source/lua/: Makefile
source/sprites/: ai.cpp  ai_lua.cpp  ai_lua.h  effects.cpp  effects.h  gate.cpp  planets.h  planets_lua.h  projectile.cpp  projectile.h  ship.cpp  sprite.cpp  spritemanager.cpp  spritemanager.h
source/tests/: tests.cpp  ui.cpp
source/ui/: ui.cpp  ui.h  ui_action.h  ui_button.cpp  ui_checkbox.h  ui_container.cpp  ui_dialogs.cpp  ui_dialogs.h  ui_dropdown.h  ui_label.cpp  ui_lua.cpp  ui_lua.h  ui_map.cpp  ui_map.h  ui_paragraph.cpp  ui_paragraph.h  ui_picture.cpp  ui_slider.h  ui_tabs.cpp  ui_tabs.h  ui_text.cpp  ui_textarea.cpp  ui_textarea.h  ui_textbox.h  ui_widget.cpp  ui_window.h  widgets.h
source/utilities/: components.cpp  coordinate.cpp  file.cpp  filesystem.cpp  log.cpp  lua.cpp  quadtree.cpp  resource.cpp  timer.cpp  timer.h  trig.cpp  xml.cpp
src/: common.h  defines.h  epiar.rc  includes.h  main.cpp  menu.cpp  menu.h  version.h
src/audio/: audio.cpp  audio.h  audio_lua.cpp  audio_lua.h  music.cpp  music.h  sound.cpp  sound.h
src/engine/: alliances.cpp  alliances.h  calendar.cpp  calendar.h  calendar_lua.cpp  calendar_lua.h  camera.cpp  camera.h  commodities.cpp  commodities.h  console.cpp  console.h  engines.cpp  engines.h  hud.cpp  hud.h  map.cpp  map.h  mission.cpp  models.cpp  models.h  navigation.cpp  navigation.h  outfit.cpp  outfit.h  scenario.cpp  scenario.h  scenario_lua.cpp  scenario_lua.h  sector.cpp  sector.h  sectors.cpp  sectors.h  simulation.cpp  simulation.h  simulation_lua.cpp  simulation_lua.h  starfield.cpp  starfield.h  technologies.cpp  (+3 more)
src/graphics/: animation.cpp  animation.h  color.cpp  color.h  font.cpp  font.h  image.cpp  image.h  video.cpp  video.h
src/input/: input.cpp  input.h
src/sprites/: ai.cpp  ai.h  ai_lua.cpp  effects.cpp  gate.cpp  gate.h  npc.cpp  npc.h  npc_lua.cpp  npc_lua.h  planets.cpp  planets.h  planets_lua.cpp  planets_lua.h  player.cpp  (+9 more)
(+74 files in other folders)
