epiar_data_artdir = $(datadir)/epiar/data/art/
epiar_data_art_DATA = data/art/EpiarFleetbig.png data/art/gatescene.png data/art/menu1.png data/art/menu4.png     data/art/ubertextest.png data/art/fight1.png         data/art/logo.png       data/art/menu2.png  data/art/menu5.png data/art/fight2.png      data/art/menu3.png  data/art/uberdone.png

