epiar_data_audio_effectsdir = $(datadir)/epiar/data/audio/Effects/
epiar_data_audio_effects_DATA = data/audio/Effects/18384__inferno__largex.wav.ogg

epiar_data_audio_enginesdir = $(datadir)/epiar/data/audio/Engines/
epiar_data_audio_engines_DATA = data/audio/Engines/22455__nathanshadow__Thruster_Level_II.ogg

epiar_data_audio_interfacedir = $(datadir)/epiar/data/audio/Interface/
epiar_data_audio_interface_DATA = data/audio/Interface/28820__junggle__btn010.ogg data/audio/Interface/28853__junggle__btn043.ogg

epiar_data_audio_musicdir = $(datadir)/epiar/data/audio/Music/
epiar_data_audio_music_DATA = data/audio/Music/beyond_the_network.it data/audio/Music/cyberm00n.mod

epiar_data_audio_weaponsdir = $(datadir)/epiar/data/audio/Weapons/
epiar_data_audio_weapons_DATA = data/audio/Weapons/flaunch.ogg data/audio/Weapons/rlaunch.ogg data/audio/Weapons/slimeball.ogg data/audio/Weapons/iceball.ogg

