epiar_data_audio_effectsdir = $(datadir)/epiar/data/audio/effects/
epiar_data_audio_effects_DATA = data/audio/effects/18384__inferno__largex.wav.ogg

epiar_data_audio_enginesdir = $(datadir)/epiar/data/audio/engines/
epiar_data_audio_engines_DATA = data/audio/engines/22455__nathanshadow__Thruster_Level_II.ogg

epiar_data_audio_interfacedir = $(datadir)/epiar/data/audio/interface/
epiar_data_audio_interface_DATA = data/audio/interface/28820__junggle__btn010.ogg data/audio/interface/28853__junggle__btn043.ogg

epiar_data_audio_musicdir = $(datadir)/epiar/data/audio/music/
epiar_data_audio_music_DATA = data/audio/music/beyond_the_network.it data/audio/music/cyberm00n.mod

epiar_data_audio_weaponsdir = $(datadir)/epiar/data/audio/weapons/
epiar_data_audio_weapons_DATA = data/audio/weapons/flaunch.ogg data/audio/weapons/rlaunch.ogg data/audio/weapons/slimeball.ogg data/audio/weapons/iceball.ogg

