epiar_data_graphicsdir = $(datadir)/epiar/data/graphics/
epiar_data_graphics_DATA = \
	data/graphics/Epiar_Icon.png \
	data/graphics/Epiar_Icon2.png \
	data/graphics/Fighter.png \
	data/graphics/SpaceBomb.png \
	data/graphics/Station01.png \
	data/graphics/Station02.png \
	data/graphics/Station03.png \
	data/graphics/Station04.png \
	data/graphics/Station05.png \
	data/graphics/Station06.png \
	data/graphics/booster.png \
	data/graphics/btlcruiser.png \
	data/graphics/btlcruiser_pretty.png \
	data/graphics/cargoclaw.png \
	data/graphics/cargoclaw_pretty.png \
	data/graphics/cargoclaw_pretty2.png \
	data/graphics/cloaking_device.png \
	data/graphics/corvet.png \
	data/graphics/corvet2.png \
	data/graphics/corvet2_pretty.png \
	data/graphics/engine_upgrade.png \
	data/graphics/escape_pod.png \
	data/graphics/gate1_bottom.png \
	data/graphics/gate1_top.png \
	data/graphics/gate_gun.png \
	data/graphics/gate_patrol.png \
	data/graphics/goldbeam.png \
	data/graphics/goldbeam2.png \
	data/graphics/golden_uber.png \
	data/graphics/hammerhead.png \
	data/graphics/hammerhead_pretty.png \
	data/graphics/hp_carbon.png \
	data/graphics/hp_copper.png \
	data/graphics/hp_electron.png \
	data/graphics/hp_organic.png \
	data/graphics/hp_titanium.png \
	data/graphics/kartanal.png \
	data/graphics/laser_blue.png \
	data/graphics/laser_green.png \
	data/graphics/laser_grey.png \
	data/graphics/mark2_laser.png \
	data/graphics/mark3_laser.png \
	data/graphics/marker_blue.png \
	data/graphics/marker_off.png \
	data/graphics/marker_red.png \
	data/graphics/missile.png \
	data/graphics/missile_launcher.png \
	data/graphics/missile_pack.png \
	data/graphics/missiles.png \
	data/graphics/nav_device.png \
	data/graphics/palitu01.png \
	data/graphics/patrol.png \
	data/graphics/patrol_pretty.png \
	data/graphics/pirate.png \
	data/graphics/pirate_pretty.png \
	data/graphics/planet1.png \
	data/graphics/planet10.png \
	data/graphics/planet11.png \
	data/graphics/planet12.png \
	data/graphics/planet13.png \
	data/graphics/planet14.png \
	data/graphics/planet15.png \
	data/graphics/planet16.png \
	data/graphics/planet17.png \
	data/graphics/planet18.png \
	data/graphics/planet19.png \
	data/graphics/planet1s.png \
	data/graphics/planet2.png \
	data/graphics/planet20.png \
	data/graphics/planet21.png \
	data/graphics/planet3.png \
	data/graphics/planet4.png \
	data/graphics/planet5.png \
	data/graphics/planet6.png \
	data/graphics/planet7.png \
	data/graphics/planet8.png \
	data/graphics/planet9.png \
	data/graphics/podv.png \
	data/graphics/raven.png \
	data/graphics/raven_pretty.png \
	data/graphics/scivessel.png \
	data/graphics/scivessel_pretty.png \
	data/graphics/sector_map.png \
	data/graphics/shuttle.png \
	data/graphics/shuttle_pretty.png \
	data/graphics/solcatian_laser.png \
	data/graphics/status_sensor.png \
	data/graphics/sublight_laser.png \
	data/graphics/terran-frigate.png \
	data/graphics/thruster.png \
	data/graphics/torpedo.png \
	data/graphics/torpedo1.png \
	data/graphics/torpedo_launcher.png \
	data/graphics/trans.png \
	data/graphics/trans2.png \
	data/graphics/tugship.png \
	data/graphics/tugship_pretty.png \
	data/graphics/tugship_pretty2.png \
	data/graphics/turret.png \
	data/graphics/txt_continue_active.png \
	data/graphics/txt_continue_inactive.png \
	data/graphics/txt_editor_active.png \
	data/graphics/txt_editor_inactive.png \
	data/graphics/txt_exit_active.png \
	data/graphics/txt_exit_inactive.png \
	data/graphics/txt_load_game_active.png \
	data/graphics/txt_load_game_inactive.png \
	data/graphics/txt_new_game_active.png \
	data/graphics/txt_new_game_inactive.png \
	data/graphics/txt_options_active.png \
	data/graphics/txt_options_inactive.png \
	data/graphics/uber.png \
	data/graphics/uber_pretty.png \
	data/graphics/xv-1.png \
	data/graphics/xv-1_pretty.png
	
