epiar_data_scenariodir = $(datadir)/epiar/data/scenario/default/
epiar_data_scenario_DATA = data/scenario/default/alliances.xml    data/scenario/default/gates.xml    data/scenario/default/planets.xml       data/scenario/default/weapons.xml data/scenario/default/commodities.xml  data/scenario/default/models.xml   data/scenario/default/scenario.xml data/scenario/default/engines.xml      data/scenario/default/outfits.xml  data/scenario/default/technologies.xml  data/scenario/default/systems.xml

