epiar_data_scenariodir = $(datadir)/epiar/data/scenario/main/
epiar_data_scenario_DATA = data/scenario/main/alliances.xml    data/scenario/main/gates.xml    data/scenario/main/planets.xml       data/scenario/main/weapons.xml data/scenario/main/commodities.xml  data/scenario/main/models.xml   data/scenario/main/scenario.xml data/scenario/main/engines.xml      data/scenario/main/outfits.xml  data/scenario/main/technologies.xml  data/scenario/main/sectors.xml
