epiar_data_scriptsdir = $(datadir)/epiar/data/scripts/
epiar_data_scripts_DATA = data/scripts/ai.lua         data/scripts/commands.lua  data/scripts/fleet.lua    data/scripts/missions.lua  data/scripts/universe.lua data/scripts/autopilot.lua  data/scripts/editor.lua     data/scripts/player.lua    data/scripts/utilities.lua data/scripts/landing.lua

