epiar_data_simulationdir = $(datadir)/epiar/data/simulation/default/
epiar_data_simulation_DATA = data/simulation/default/alliances.xml    data/simulation/default/gates.xml    data/simulation/default/planets.xml       data/simulation/default/weapons.xml data/simulation/default/commodities.xml  data/simulation/default/models.xml   data/simulation/default/simulation.xml data/simulation/default/engines.xml      data/simulation/default/outfits.xml  data/simulation/default/technologies.xml  data/simulation/default/systems.xml

