epiar_data_skindir = $(datadir)/epiar/data/skin/
epiar_data_skin_DATA = data/skin/active-tab-left.png       data/skin/ui_button_pressed.png       data/skin/ui_scrollbar_handle_down.png \
 data/skin/active-tab-middle.png     data/skin/ui_checkbox_blank.png       data/skin/ui_scrollbar_handle_up.png \
 data/skin/active-tab-right.png      data/skin/ui_checkbox_check.png       data/skin/ui_scrollbar_up.png \
 data/skin/hud_bar_left.png          data/skin/ui_dropdown_closed.png      data/skin/ui_slider_background.png \
 data/skin/hud_bar_middle.png        data/skin/ui_dropdown_mouseover.png   data/skin/ui_slider_bar.png \
 data/skin/hud_bar_right.png         data/skin/ui_dropdown_open.png        data/skin/ui_slider_filled.png \
 data/skin/hud_hullstr_bar.png       data/skin/ui_dropdown_selected.png    data/skin/ui_slider_handle.png \
 data/skin/hud_hullstr_leftbar.png   data/skin/ui_frame_back.png           data/skin/ui_slider_left.png \
 data/skin/hud_hullstr.png           data/skin/ui_frame_left.png           data/skin/ui_slider_right.png \
 data/skin/hud_hullstr_rightbar.png  data/skin/ui_frame_low_left.png       data/skin/ui_textbox.png \
 data/skin/hud_radarnav.png          data/skin/ui_frame_low.png            data/skin/ui_wnd_back.png \
 data/skin/hud_shieldintegrity.png   data/skin/ui_frame_low_right.png      data/skin/ui_wnd_left.png \
 data/skin/inactive-tab-left.png     data/skin/ui_frame_right.png          data/skin/ui_wnd_low_left.png \
 data/skin/inactive-tab-middle.png   data/skin/ui_frame_up_left.png        data/skin/ui_wnd_low.png \
 data/skin/inactive-tab-right.png    data/skin/ui_frame_up.png             data/skin/ui_wnd_low_right.png \
 data/skin/ui_frame_up_right.png       data/skin/ui_wnd_right.png \
 data/skin/skin.xml                  data/skin/ui_scrollbar_bg.png         data/skin/ui_wnd_up_left.png \
 data/skin/ui_button_mouseover.png   data/skin/ui_scrollbar_down.png       data/skin/ui_wnd_up.png \
 data/skin/ui_button.png             data/skin/ui_scrollbar_handle_bg.png  data/skin/ui_wnd_up_right.png

