epiar_resources_artdir = $(datadir)/epiar/resources/Art/
epiar_resources_art_DATA = resources/Art/EpiarFleetbig.png resources/Art/gatescene.png resources/Art/menu1.png resources/Art/menu4.png     resources/Art/ubertextest.png resources/Art/fight1.png         resources/Art/logo.png       resources/Art/menu2.png  resources/Art/menu5.png resources/Art/fight2.png      resources/Art/menu3.png  resources/Art/uberdone.png

