epiar_resources_audio_effectsdir = $(datadir)/epiar/resources/Audio/Effects/
epiar_resources_audio_effects_DATA = resources/Audio/Effects/18384__inferno__largex.wav.ogg

epiar_resources_audio_enginesdir = $(datadir)/epiar/resources/Audio/Engines/
epiar_resources_audio_engines_DATA = resources/Audio/Engines/22455__nathanshadow__Thruster_Level_II.ogg

epiar_resources_audio_interfacedir = $(datadir)/epiar/resources/Audio/Interface/
epiar_resources_audio_interface_DATA = resources/Audio/Interface/28820__junggle__btn010.ogg resources/Audio/Interface/28853__junggle__btn043.ogg

epiar_resources_audio_musicdir = $(datadir)/epiar/resources/Audio/Music/
epiar_resources_audio_music_DATA = resources/Audio/Music/beyond_the_network.it resources/Audio/Music/cyberm00n.mod

epiar_resources_audio_weaponsdir = $(datadir)/epiar/resources/Audio/Weapons/
epiar_resources_audio_weapons_DATA = resources/Audio/Weapons/flaunch.ogg resources/Audio/Weapons/rlaunch.ogg resources/Audio/Weapons/slimeball.ogg resources/Audio/Weapons/iceball.ogg

