epiar_resources_fontsdir = $(datadir)/epiar/resources/Fonts/
epiar_resources_fonts_DATA = resources/Fonts/ConsolaMono.ttf  resources/Fonts/FreeSerif.ttf  resources/Fonts/usuziv2.ttf  resources/Fonts/Alfphabet-IV.ttf resources/Fonts/FreeSans.ttf  resources/Fonts/usuzv2i.ttf  resources/Fonts/visitor2.ttf
