epiar_resources_graphicsdir = $(datadir)/epiar/resources/Graphics/
epiar_resources_graphics_DATA = \
	resources/Graphics/Epiar_Icon.png \
	resources/Graphics/Epiar_Icon2.png \
	resources/Graphics/Fighter.png \
	resources/Graphics/SpaceBomb.png \
	resources/Graphics/Station01.png \
	resources/Graphics/Station02.png \
	resources/Graphics/Station03.png \
	resources/Graphics/Station04.png \
	resources/Graphics/Station05.png \
	resources/Graphics/Station06.png \
	resources/Graphics/booster.png \
	resources/Graphics/btlcruiser.png \
	resources/Graphics/btlcruiser_pretty.png \
	resources/Graphics/cargoclaw.png \
	resources/Graphics/cargoclaw_pretty.png \
	resources/Graphics/cargoclaw_pretty2.png \
	resources/Graphics/cloaking_device.png \
	resources/Graphics/corvet.png \
	resources/Graphics/corvet2.png \
	resources/Graphics/corvet2_pretty.png \
	resources/Graphics/engine_upgrade.png \
	resources/Graphics/escape_pod.png \
	resources/Graphics/gate1_bottom.png \
	resources/Graphics/gate1_top.png \
	resources/Graphics/gate_gun.png \
	resources/Graphics/gate_patrol.png \
	resources/Graphics/goldbeam.png \
	resources/Graphics/goldbeam2.png \
	resources/Graphics/golden_uber.png \
	resources/Graphics/hammerhead.png \
	resources/Graphics/hammerhead_pretty.png \
	resources/Graphics/hp_carbon.png \
	resources/Graphics/hp_copper.png \
	resources/Graphics/hp_electron.png \
	resources/Graphics/hp_organic.png \
	resources/Graphics/hp_titanium.png \
	resources/Graphics/kartanal.png \
	resources/Graphics/laser_blue.png \
	resources/Graphics/laser_green.png \
	resources/Graphics/laser_grey.png \
	resources/Graphics/mark2_laser.png \
	resources/Graphics/mark3_laser.png \
	resources/Graphics/marker_blue.png \
	resources/Graphics/marker_off.png \
	resources/Graphics/marker_red.png \
	resources/Graphics/missile.png \
	resources/Graphics/missile_launcher.png \
	resources/Graphics/missile_pack.png \
	resources/Graphics/missiles.png \
	resources/Graphics/nav_device.png \
	resources/Graphics/palitu01.png \
	resources/Graphics/patrol.png \
	resources/Graphics/patrol_pretty.png \
	resources/Graphics/pirate.png \
	resources/Graphics/pirate_pretty.png \
	resources/Graphics/planet1.png \
	resources/Graphics/planet10.png \
	resources/Graphics/planet11.png \
	resources/Graphics/planet12.png \
	resources/Graphics/planet13.png \
	resources/Graphics/planet14.png \
	resources/Graphics/planet15.png \
	resources/Graphics/planet16.png \
	resources/Graphics/planet17.png \
	resources/Graphics/planet18.png \
	resources/Graphics/planet19.png \
	resources/Graphics/planet1s.png \
	resources/Graphics/planet2.png \
	resources/Graphics/planet20.png \
	resources/Graphics/planet21.png \
	resources/Graphics/planet3.png \
	resources/Graphics/planet4.png \
	resources/Graphics/planet5.png \
	resources/Graphics/planet6.png \
	resources/Graphics/planet7.png \
	resources/Graphics/planet8.png \
	resources/Graphics/planet9.png \
	resources/Graphics/podv.png \
	resources/Graphics/raven.png \
	resources/Graphics/raven_pretty.png \
	resources/Graphics/scivessel.png \
	resources/Graphics/scivessel_pretty.png \
	resources/Graphics/sector_map.png \
	resources/Graphics/shuttle.png \
	resources/Graphics/shuttle_pretty.png \
	resources/Graphics/solcatian_laser.png \
	resources/Graphics/status_sensor.png \
	resources/Graphics/sublight_laser.png \
	resources/Graphics/terran-frigate.png \
	resources/Graphics/thruster.png \
	resources/Graphics/torpedo.png \
	resources/Graphics/torpedo1.png \
	resources/Graphics/torpedo_launcher.png \
	resources/Graphics/trans.png \
	resources/Graphics/trans2.png \
	resources/Graphics/tugship.png \
	resources/Graphics/tugship_pretty.png \
	resources/Graphics/tugship_pretty2.png \
	resources/Graphics/turret.png \
	resources/Graphics/txt_continue_active.png \
	resources/Graphics/txt_continue_inactive.png \
	resources/Graphics/txt_editor_active.png \
	resources/Graphics/txt_editor_inactive.png \
	resources/Graphics/txt_exit_active.png \
	resources/Graphics/txt_exit_inactive.png \
	resources/Graphics/txt_load_game_active.png \
	resources/Graphics/txt_load_game_inactive.png \
	resources/Graphics/txt_new_game_active.png \
	resources/Graphics/txt_new_game_inactive.png \
	resources/Graphics/txt_options_active.png \
	resources/Graphics/txt_options_inactive.png \
	resources/Graphics/uber.png \
	resources/Graphics/uber_pretty.png \
	resources/Graphics/xv-1.png \
	resources/Graphics/xv-1_pretty.png
	
