epiar_resources_scriptsdir = $(datadir)/epiar/resources/Scripts/
epiar_resources_scripts_DATA = resources/Scripts/ai.lua         resources/Scripts/commands.lua  resources/Scripts/fleet.lua    resources/Scripts/missions.lua  resources/Scripts/universe.lua resources/Scripts/autopilot.lua  resources/Scripts/editor.lua     resources/Scripts/player.lua    resources/Scripts/utilities.lua resources/Scripts/landing.lua

