epiar_resources_skindir = $(datadir)/epiar/resources/Skin/
epiar_resources_skin_DATA = resources/Skin/active-tab-left.png       resources/Skin/ui_button_pressed.png       resources/Skin/ui_scrollbar_handle_down.png \
 resources/Skin/active-tab-middle.png     resources/Skin/ui_checkbox_blank.png       resources/Skin/ui_scrollbar_handle_up.png \
 resources/Skin/active-tab-right.png      resources/Skin/ui_checkbox_check.png       resources/Skin/ui_scrollbar_up.png \
 resources/Skin/hud_bar_left.png          resources/Skin/ui_dropdown_closed.png      resources/Skin/ui_slider_background.png \
 resources/Skin/hud_bar_middle.png        resources/Skin/ui_dropdown_mouseover.png   resources/Skin/ui_slider_bar.png \
 resources/Skin/hud_bar_right.png         resources/Skin/ui_dropdown_open.png        resources/Skin/ui_slider_filled.png \
 resources/Skin/hud_hullstr_bar.png       resources/Skin/ui_dropdown_selected.png    resources/Skin/ui_slider_handle.png \
 resources/Skin/hud_hullstr_leftbar.png   resources/Skin/ui_frame_back.png           resources/Skin/ui_slider_left.png \
 resources/Skin/hud_hullstr.png           resources/Skin/ui_frame_left.png           resources/Skin/ui_slider_right.png \
 resources/Skin/hud_hullstr_rightbar.png  resources/Skin/ui_frame_low_left.png       resources/Skin/ui_textbox.png \
 resources/Skin/hud_radarnav.png          resources/Skin/ui_frame_low.png            resources/Skin/ui_wnd_back.png \
 resources/Skin/hud_shieldintegrity.png   resources/Skin/ui_frame_low_right.png      resources/Skin/ui_wnd_left.png \
 resources/Skin/inactive-tab-left.png     resources/Skin/ui_frame_right.png          resources/Skin/ui_wnd_low_left.png \
 resources/Skin/inactive-tab-middle.png   resources/Skin/ui_frame_up_left.png        resources/Skin/ui_wnd_low.png \
 resources/Skin/inactive-tab-right.png    resources/Skin/ui_frame_up.png             resources/Skin/ui_wnd_low_right.png \
 resources/Skin/ui_frame_up_right.png       resources/Skin/ui_wnd_right.png \
 resources/Skin/skin.xml                  resources/Skin/ui_scrollbar_bg.png         resources/Skin/ui_wnd_up_left.png \
 resources/Skin/ui_button_mouseover.png   resources/Skin/ui_scrollbar_down.png       resources/Skin/ui_wnd_up.png \
 resources/Skin/ui_button.png             resources/Skin/ui_scrollbar_handle_bg.png  resources/Skin/ui_wnd_up_right.png

