epiar_resources_artdir = $(datadir)/epiar/resources/art/
epiar_resources_art_DATA = resources/art/EpiarFleetbig.png resources/art/gatescene.png resources/art/menu1.png resources/art/menu4.png     resources/art/ubertextest.png resources/art/fight1.png         resources/art/logo.png       resources/art/menu2.png  resources/art/menu5.png resources/art/fight2.png      resources/art/menu3.png  resources/art/uberdone.png

