epiar_resources_audio_effectsdir = $(datadir)/epiar/resources/audio/Effects/
epiar_resources_audio_effects_DATA = resources/audio/Effects/18384__inferno__largex.wav.ogg

epiar_resources_audio_enginesdir = $(datadir)/epiar/resources/audio/Engines/
epiar_resources_audio_engines_DATA = resources/audio/Engines/22455__nathanshadow__Thruster_Level_II.ogg

epiar_resources_audio_interfacedir = $(datadir)/epiar/resources/audio/Interface/
epiar_resources_audio_interface_DATA = resources/audio/Interface/28820__junggle__btn010.ogg resources/audio/Interface/28853__junggle__btn043.ogg

epiar_resources_audio_musicdir = $(datadir)/epiar/resources/audio/Music/
epiar_resources_audio_music_DATA = resources/audio/Music/beyond_the_network.it resources/audio/Music/cyberm00n.mod

epiar_resources_audio_weaponsdir = $(datadir)/epiar/resources/audio/Weapons/
epiar_resources_audio_weapons_DATA = resources/audio/Weapons/flaunch.ogg resources/audio/Weapons/rlaunch.ogg resources/audio/Weapons/slimeball.ogg resources/audio/Weapons/iceball.ogg

