epiar_resources_fontsdir = $(datadir)/epiar/resources/fonts/
epiar_resources_fonts_DATA = resources/fonts/ConsolaMono.ttf  resources/fonts/FreeSerif.ttf  resources/fonts/usuziv2.ttf  resources/fonts/Alfphabet-IV.ttf resources/fonts/FreeSans.ttf  resources/fonts/usuzv2i.ttf  resources/fonts/visitor2.ttf
