epiar_resources_graphicsdir = $(datadir)/epiar/resources/graphics/
epiar_resources_graphics_DATA = \
	resources/graphics/Epiar_Icon.png \
	resources/graphics/Epiar_Icon2.png \
	resources/graphics/Fighter.png \
	resources/graphics/SpaceBomb.png \
	resources/graphics/Station01.png \
	resources/graphics/Station02.png \
	resources/graphics/Station03.png \
	resources/graphics/Station04.png \
	resources/graphics/Station05.png \
	resources/graphics/Station06.png \
	resources/graphics/booster.png \
	resources/graphics/btlcruiser.png \
	resources/graphics/btlcruiser_pretty.png \
	resources/graphics/cargoclaw.png \
	resources/graphics/cargoclaw_pretty.png \
	resources/graphics/cargoclaw_pretty2.png \
	resources/graphics/cloaking_device.png \
	resources/graphics/corvet.png \
	resources/graphics/corvet2.png \
	resources/graphics/corvet2_pretty.png \
	resources/graphics/engine_upgrade.png \
	resources/graphics/escape_pod.png \
	resources/graphics/gate1_bottom.png \
	resources/graphics/gate1_top.png \
	resources/graphics/gate_gun.png \
	resources/graphics/gate_patrol.png \
	resources/graphics/goldbeam.png \
	resources/graphics/goldbeam2.png \
	resources/graphics/golden_uber.png \
	resources/graphics/hammerhead.png \
	resources/graphics/hammerhead_pretty.png \
	resources/graphics/hp_carbon.png \
	resources/graphics/hp_copper.png \
	resources/graphics/hp_electron.png \
	resources/graphics/hp_organic.png \
	resources/graphics/hp_titanium.png \
	resources/graphics/kartanal.png \
	resources/graphics/laser_blue.png \
	resources/graphics/laser_green.png \
	resources/graphics/laser_grey.png \
	resources/graphics/mark2_laser.png \
	resources/graphics/mark3_laser.png \
	resources/graphics/marker_blue.png \
	resources/graphics/marker_off.png \
	resources/graphics/marker_red.png \
	resources/graphics/missile.png \
	resources/graphics/missile_launcher.png \
	resources/graphics/missile_pack.png \
	resources/graphics/missiles.png \
	resources/graphics/nav_device.png \
	resources/graphics/palitu01.png \
	resources/graphics/patrol.png \
	resources/graphics/patrol_pretty.png \
	resources/graphics/pirate.png \
	resources/graphics/pirate_pretty.png \
	resources/graphics/planet1.png \
	resources/graphics/planet10.png \
	resources/graphics/planet11.png \
	resources/graphics/planet12.png \
	resources/graphics/planet13.png \
	resources/graphics/planet14.png \
	resources/graphics/planet15.png \
	resources/graphics/planet16.png \
	resources/graphics/planet17.png \
	resources/graphics/planet18.png \
	resources/graphics/planet19.png \
	resources/graphics/planet1s.png \
	resources/graphics/planet2.png \
	resources/graphics/planet20.png \
	resources/graphics/planet21.png \
	resources/graphics/planet3.png \
	resources/graphics/planet4.png \
	resources/graphics/planet5.png \
	resources/graphics/planet6.png \
	resources/graphics/planet7.png \
	resources/graphics/planet8.png \
	resources/graphics/planet9.png \
	resources/graphics/podv.png \
	resources/graphics/raven.png \
	resources/graphics/raven_pretty.png \
	resources/graphics/scivessel.png \
	resources/graphics/scivessel_pretty.png \
	resources/graphics/sector_map.png \
	resources/graphics/shuttle.png \
	resources/graphics/shuttle_pretty.png \
	resources/graphics/solcatian_laser.png \
	resources/graphics/status_sensor.png \
	resources/graphics/sublight_laser.png \
	resources/graphics/terran-frigate.png \
	resources/graphics/thruster.png \
	resources/graphics/torpedo.png \
	resources/graphics/torpedo1.png \
	resources/graphics/torpedo_launcher.png \
	resources/graphics/trans.png \
	resources/graphics/trans2.png \
	resources/graphics/tugship.png \
	resources/graphics/tugship_pretty.png \
	resources/graphics/tugship_pretty2.png \
	resources/graphics/turret.png \
	resources/graphics/txt_continue_active.png \
	resources/graphics/txt_continue_inactive.png \
	resources/graphics/txt_editor_active.png \
	resources/graphics/txt_editor_inactive.png \
	resources/graphics/txt_exit_active.png \
	resources/graphics/txt_exit_inactive.png \
	resources/graphics/txt_load_game_active.png \
	resources/graphics/txt_load_game_inactive.png \
	resources/graphics/txt_new_game_active.png \
	resources/graphics/txt_new_game_inactive.png \
	resources/graphics/txt_options_active.png \
	resources/graphics/txt_options_inactive.png \
	resources/graphics/uber.png \
	resources/graphics/uber_pretty.png \
	resources/graphics/xv-1.png \
	resources/graphics/xv-1_pretty.png
	
