epiar_resources_scenariosdir = $(datadir)/epiar/resources/scenarios/main/
epiar_resources_scenarios_DATA = resources/scenarios/main/alliances.xml   resources/scenarios/main/map.xml       resources/scenarios/main/weapons.xml resources/scenarios/main/commodities.xml  resources/scenarios/main/models.xml   resources/scenarios/main/scenario.xml resources/scenarios/main/engines.xml      resources/scenarios/main/outfits.xml  resources/scenarios/main/technologies.xml

